Readme - test snippet